--- a/src/Styles/NavBar.module.css
+++ b/src/Styles/NavBar.module.css
@@ -119,7 +119,7 @@
   display: flex;
   align-items: center;
   gap: 0.6rem;
-  color: #cbd0f7;
+  color: whitesmoke;
   font-weight: 500;
   text-decoration: none;
   padding: 0.6rem 1.2rem;
